<resources>
    <string name="app_name">RFKMonitor</string>
    <!-- Strings related to login -->
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="user_type">User Type</string>
    <string name="school_dropdown">School</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_teacher_dashboard">TeacherDashboard</string>



    <!-- Teachers Dashboard -->
    <string name="school_name">Valley Academy</string>
    <string name="class_name">Standard One</string>
    <string name="class_size">20</string>
    <string name="home_subtitle">Home</string>
    <string name="home_title">RFKMonitor</string>

    <!-- Class View of Students -->
    <string name="student_name">Chanel Coco</string>
    <string name="present"> Present </string>
    <string name="add_student">Add New Student</string>
    <string name="logo"> Organization logo </string>
    <string name="teach_username">lgoloh</string>
    <string name="title_activity_add_student">AddStudentActivity</string>
    <string name="title_activity_teacher_profile">TeacherProfileActivity</string>
    <string name="submit_attendance"> Submit </string>


    <!-- Add Students Activity -->
    <string name="addStudent_title">New Student</string>
    <string name="firstname">First Name</string>
    <string name="lastname"> Last Name</string>
    <string name="age"> Age </string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="guardian_name"> Name of Parent/Guardian</string>
    <string name="guardian_number">Telephone</string>
    <string name="address">Home Address</string>
    <string name="student_firstname"></string>
    <string name="student_lastname"></string>
    <string name="student_gender">Gender</string>
    <string name="student_dob"></string>
    <string name="student_guardian"></string>
    <string name="guardian_id">Guardian National ID</string>
    <string name="student_shoesize">Shoe Size</string>
    <string name="new_profile">New Student</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>


    <!-- Teacher Profile Activity -->
    <string name="teacherProfile_title">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="teachers_name">Bryan Hammond</string>
    <string name="national_id">004469</string>
    <string name="nat_id">National ID</string>
    <string name="contact">Contact Number</string>
    <string name="contact_num">555 666 777</string>
    <string name="homeroom"> Class Name </string>
    <string name="stream">Stream</string>
    <string name="school_id">School ID</string>
    <string name="sch_id">29807</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="gender_name">Male</string>
    <string name="first_name">Bryan</string>
    <string name="last_name">Hammond</string>
    <string name="logout">Logout</string>
    <string name="exit_profile">Exit Profile</string>


    <!-- Student Profile Activity -->
    <string name="edit_student_profile">Edit Profile</string>
    <string name="student_id">Student ID</string>
    <string name="avggrade">Average Grade</string>
    <string name="classname">Class Name</string>


    <!-- Edit Students Activity -->
    <string name="delete">Delete</string>


    <!-- Feeding Program Dashboard Activity -->
    <string name="breakfast_program">Breakfast Program</string>
    <string name="lunch_program">Lunch Program</string>
    <string name="total_attendance">Attendance</string>
    <string name="dashboard">DashBoard</string>


    <!-- Lunch Program Dialog -->
    <string name="githeri">Githeri</string>
    <string name="rice_beans">Rice &amp; Beans</string>

    <string name="ratio">24.67 kgs </string>
    <string name="date">November 4th 2018</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>


    <!-- Feeding Programs Strings -->
    <string name="uji_title">Uji</string>
    <string name="githeri_title">Githeri</string>
    <string name="rb_title">Rice &amp; Beans </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_message"></string>
    <string name="title_activity_student_profile">StudentProfileActivity</string>


    <!-- Organization Dashboard -->
    <string name="org_name">Rahul Kotak Foundation</string>
    <string name="nameOfSchool"></string>
    <string name="academic_year">Academic Year: 2018&#8211;2019</string>
    <string name="week_name">Week of December 10th</string>

    <!-- School Dashboard-->
    <string name="calendar_name">Master Calendar</string>


    <string-array name="school_array">
        <item>Valley Academy</item>
        <item>SOKO Primary</item>
        <item>NextGen</item>
        <item>SHAMCO</item>
        <item>St. Vitalis Nanga</item>
        <item>Elimu de Ark</item>

    </string-array>

    <string-array name="user_array">
        <item>Teacher</item>
        <item>Cook</item>
        <item>Organization</item>


    </string-array>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_splash">Splash</string>

    <string name="attendance">Attendance</string>
    <string name="feeding">Feeding</string>
    <string name="today_date">December 15th 2018</string>


</resources>
