<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.TeacherProfileActivity"
    tools:showIn="@layout/activity_teacher_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:text="@string/school_name"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="false"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginRight="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/edit_profile"
                android:src="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/name"
                android:layout_width="234dp"
                android:layout_height="51dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="29dp"
                android:layout_marginRight="29dp"
                android:layout_marginBottom="0dp"
                android:layout_toStartOf="@+id/edit"
                android:layout_toLeftOf="@+id/edit"
                android:textAlignment="center"
                android:text="@string/teachers_name"
                android:textSize="25sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/gender"
                android:paddingRight="95dp"
                android:paddingEnd="95dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/teach_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/gender_name"
                android:inputType="text"
                android:enabled="false"
                android:selectAllOnFocus="false"
                android:text="@string/gender_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/schoolID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/school_id"
                android:paddingRight="70dp"
                android:paddingEnd="70dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/school_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sch_id"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:selectAllOnFocus="false"
                android:text="@string/sch_id" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nationalID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/nat_id"
                android:paddingRight="60dp"
                android:paddingEnd="60dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/national_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/national_id"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:selectAllOnFocus="false"
                android:text="@string/national_id"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/contact"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/contact_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/contact_num"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:selectAllOnFocus="false"
                android:text="@string/contact_num"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/homeroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/homeroom"
                android:paddingRight="55dp"
                android:paddingEnd="55dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/class_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/class_name"
                android:inputType="text"
                android:enabled="false"
                android:selectAllOnFocus="false"
                android:text="@string/class_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/stream"
                android:paddingRight="95dp"
                android:paddingEnd="95dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/stream_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/class_name"
                android:inputType="text"
                android:enabled="false"
                android:selectAllOnFocus="false"
                android:text="@string/class_name"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

