<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TeacherProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/rfklogo"
                    android:contentDescription="@string/logo"/>

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="49dp"
                    android:layout_height="39dp"
                    android:layout_alignStart="@+id/logo"
                    android:layout_alignLeft="@+id/logo"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="298dp"
                    android:layout_marginLeft="298dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/water_light_effect"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.974"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="48dp"
                    android:layout_height="22dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="194dp"
                    android:layout_marginLeft="194dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="66dp"
                    android:layout_marginRight="66dp"
                    android:layout_toEndOf="@id/logo"
                    android:layout_toRightOf="@id/logo"
                    android:text="@string/teach_username"
                    android:textColor="@color/colorFont"
                    app:layout_constraintEnd_toStartOf="@+id/profile_image"
                    app:layout_constraintTop_toTopOf="parent" />


            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.EditTeacherProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:text="@string/school_name"
            android:paddingBottom="30dp"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/firstname"
                android:paddingRight="55dp"
                android:paddingEnd="55dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/firstname_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="text"
                android:enabled="true"
                android:selectAllOnFocus="false"
                android:text="@string/first_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/lastname"
                android:paddingRight="55dp"
                android:paddingEnd="55dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/lastname_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="text"
                android:enabled="true"
                android:selectAllOnFocus="false"
                android:text="@string/last_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/gender"
                android:paddingRight="95dp"
                android:paddingEnd="95dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/teach_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/gender_name"
                android:inputType="text"
                android:enabled="true"
                android:selectAllOnFocus="false"
                android:text="@string/gender_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/schoolID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/school_id"
                android:paddingRight="70dp"
                android:paddingEnd="70dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/school_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sch_id"
                android:inputType="numberDecimal"
                android:enabled="true"
                android:selectAllOnFocus="false"
                android:text="@string/sch_id" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nationalID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/nat_id"
                android:paddingRight="60dp"
                android:paddingEnd="60dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/national_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/national_id"
                android:inputType="numberDecimal"
                android:enabled="true"
                android:selectAllOnFocus="false"
                android:text="@string/national_id"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/contact"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/contact_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/contact_num"
                android:inputType="numberDecimal"
                android:enabled="true"
                android:selectAllOnFocus="false"
                android:text="@string/contact_num"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/homeroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/homeroom"
                android:paddingRight="55dp"
                android:paddingEnd="55dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/class_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/class_name"
                android:inputType="text"
                android:enabled="true"
                android:selectAllOnFocus="false"
                android:text="@string/class_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:text="@string/stream"
                android:paddingRight="95dp"
                android:paddingEnd="95dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/stream_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/class_name"
                android:inputType="text"
                android:enabled="true"
                android:selectAllOnFocus="false"
                android:text="@string/class_name"/>

        </LinearLayout>
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>